[gd_scene load_steps=8 format=3 uid="uid://cdrutmjqifwvx"]

[ext_resource type="Script" path="res://Scripts/pause_screen.gd" id="1_aqcsm"]
[ext_resource type="Theme" uid="uid://crqddcmktcgn5" path="res://Scenes/UI/main_theme.tres" id="1_kt113"]
[ext_resource type="SystemFont" uid="uid://i0jcaok61go0" path="res://Scenes/UI/new_system_font.tres" id="2_vwpf7"]
[ext_resource type="AudioStream" uid="uid://s8uflfhf4vws" path="res://Resources/Sounds/switch.ogg" id="4_ufdny"]
[ext_resource type="AudioStream" uid="uid://dq6aqeo6p4gfs" path="res://Resources/Sounds/select.ogg" id="5_cjooj"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wpde7"]
bg_color = Color(0.172549, 0.172549, 0.172549, 1)

[sub_resource type="LabelSettings" id="LabelSettings_86c1r"]
font_size = 40

[node name="pause_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_kt113")
script = ExtResource("1_aqcsm")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="CenterContainer"]
custom_minimum_size = Vector2(500, 400)
layout_mode = 2
theme = ExtResource("1_kt113")
theme_override_styles/panel = SubResource("StyleBoxFlat_wpde7")

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 30

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_vwpf7")
theme_override_font_sizes/font_size = 50
text = "GAME PAUSED"
label_settings = SubResource("LabelSettings_86c1r")
horizontal_alignment = 1

[node name="MainMenuButton" type="Button" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_vertical = 10
theme_override_fonts/font = ExtResource("2_vwpf7")
theme_override_font_sizes/font_size = 25
text = "MAIN MENU"

[node name="QuitButton" type="Button" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_vertical = 8
theme_override_fonts/font = ExtResource("2_vwpf7")
theme_override_font_sizes/font_size = 25
text = "QUIT"

[node name="sound" type="Node" parent="."]

[node name="button_hover_sound" type="AudioStreamPlayer" parent="sound"]
stream = ExtResource("4_ufdny")
max_polyphony = 2
bus = &"UI"

[node name="button_clicked_sound" type="AudioStreamPlayer" parent="sound"]
stream = ExtResource("5_cjooj")
max_polyphony = 2
bus = &"UI"

[connection signal="mouse_entered" from="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/MainMenuButton" to="." method="_on_main_menu_button_mouse_entered"]
[connection signal="pressed" from="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
[connection signal="mouse_entered" from="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_mouse_entered"]
[connection signal="pressed" from="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
